--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <div class="main">
-      <h1>I love Juggling...</h1>
+      <h1>I love Juggling!</h1>
+      <img
+        src="/images/showclubs.jpg"
+        alt="kerry with 3 juggling clubs"
+        class="clubimage"
+      />
+
       <h2>this is a page</h2>
     </div>
     <footer>
