--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src.css" />
-    <title>Document</title>
+    <title>I love Juggling</title>
   </head>
   <body>
     <div class="main">
@@ -13,10 +13,36 @@
       <img
         src="/images/showclubs.jpg"
         alt="kerry with 3 juggling clubs"
-        class="clubimage"
+        id="clubimage"
       />
 
-      <h2>this is a page</h2>
+      <h2>It's good for the mind, body, and soul.</h2>
+      <div class="paragraph">
+        <p>
+          I am a juggler. I first took up this art form in high school and I
+          continue to grow my skills today. Juggling is many things and takes
+          many forms, like poi and club passing. It goes by many names, such as
+          spinning or circus arts. It is exciting and challenging. It is
+          something you can do alone or with a group.
+          <br />
+          <br />
+          It was also around this time that I was introduced to the
+          <a href="http://www.phillyjugglers.com/" target="_blank" class="props"
+            >Philadelphia Jugglers Club</a
+          >, which still exists today.
+
+          <br />
+          <br />
+
+          Juggling is many things. It is an art and can take many forms and has
+          many names, such as circus arts and flow arts. My flow art of choice
+          is Poi. You may find me around town volunteering wtih the
+          <a href="https://spinco.org/" target="_blank" class="props"
+            >Philadelphia Spin Coalition</a
+          >.
+        </p>
+        <img src="/images/poi_2.jpg" alt="kerry with poi" id="poi_2" />
+      </div>
     </div>
     <footer>
       <p>
