--- a/index.html
+++ b/index.html
@@ -19,29 +19,56 @@
       <h2>It's good for the mind, body, and soul.</h2>
       <div class="paragraph">
         <p>
-          I am a juggler. I first took up this art form in high school and I
-          continue to grow my skills today. Juggling is many things and takes
-          many forms, like poi and club passing. It goes by many names, such as
-          spinning or circus arts. It is exciting and challenging. It is
-          something you can do alone or with a group.
+          Juggling is many things and takes many forms, like poi and club
+          passing. It goes by many names, such as spinning or circus arts. It is
+          something you can do alone or with a group. Most importantly, it is
+          exciting and challenging.
           <br />
           <br />
-          It was also around this time that I was introduced to the
-          <a href="http://www.phillyjugglers.com/" target="_blank" class="props"
-            >Philadelphia Jugglers Club</a
-          >, which still exists today.
-
-          <br />
-          <br />
-
-          Juggling is many things. It is an art and can take many forms and has
-          many names, such as circus arts and flow arts. My flow art of choice
-          is Poi. You may find me around town volunteering wtih the
-          <a href="https://spinco.org/" target="_blank" class="props"
-            >Philadelphia Spin Coalition</a
-          >.
+          With a little bit of coaching and about 10 minutes of patience, anyone
+          can learn to be a juggler too.
         </p>
-        <img src="/images/poi_2.jpg" alt="kerry with poi" id="poi_2" />
+        <img src="/images/poi_2.jpg" alt="Kerry spinning poi" id="poi_2" />
+        <p>
+          My name is Kerry (she/her), I am proud to be a juggler. I first took up this art form in high
+          school and I continue to grow my skills today!
+        </p>
+        <p>
+        <div class="center">
+          <h3>Passing clubs with Jersey Jugglers</h3>
+          <video class="top-video" controls width="500" controls muted>
+            <source
+              src="images/Kerry_2015_crop.mp4#t=6"
+              type="video/mp4"
+              alt="Kerry passing juggling clubs"
+            />
+            Sorry, your browser does not support embedded videos.
+          </video>
+        </div>
+        <hr />
+        <div class="center">
+          <h3>Spinning poi at the Morris Arboretum</h3>
+          <video controls width="500">
+            <source
+              src="/images/poi_short.mp4"
+              type="video/mp4"
+              border-width="0"
+            />
+
+            Sorry, your browser doesn't support embedded videos.
+          </video>
+        </div>
+        </p>
+        <p>
+        Find me around town volunteering with the
+        <a href="https://spinco.org/" target="_blank" class="props"
+          >Philadelphia Spin Coalition</a
+        >
+        or tossing clubs around at the
+        <a href="http://www.phillyjugglers.com/" target="_blank" class="props"
+          >Philadelphia Jugglers Club</a
+        >.
+        </p>
       </div>
     </div>
     <footer>
