adjusted for resize of videos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>
         <div class="center">
           <h3>Passing clubs with Jersey Jugglers</h3>
-          <video class="top-video" controls width="500" controls muted>
+          <video class="top-video" controls width="70%" controls muted>
             <source
               src="images/Kerry_2015_crop.mp4#t=6"
               type="video/mp4"
@@ -48,7 +48,7 @@
         <hr />
         <div class="center">
           <h3>Spinning poi at the Morris Arboretum</h3>
-          <video controls width="500">
+          <video controls width="70%">
             <source
               src="/images/poi_short.mp4"
               type="video/mp4"
