adjusted fonts for flex

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>I love Juggling</title>
   </head>
   <body>
-    <div class="main">
+    <div class="container main">
       <h1>I love Juggling!</h1>
       <img
         src="/images/showclubs.jpg"
