--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <hr />
         <div class="center">
           <h3>Spinning poi at the Morris Arboretum</h3>
-          <video controls width="70%">
+          <video controls width="70%" controls muted>
             <source
               src="/images/poi_short.mp4"
               type="video/mp4"
